--- a/css/schools.css
+++ b/css/schools.css
@@ -13,3 +13,12 @@
 	 margin-left: auto;
 	 margin-right: auto;
 }
+
+table{
+	border-radius: 20px;
+	border: 1px solid;
+	border-radius: 40px;
+	padding: 10px;
+	margin: 5px;
+	background-color: rgba(255,255,255,0.2);
+}
