--- a/css/videos.css
+++ b/css/videos.css
@@ -5,3 +5,12 @@
 iframe{
 	padding: 20px;
 }
+
+table{
+	border-radius: 20px;
+	border: 1px solid;
+	border-radius: 40px;
+	padding: 10px;
+	margin: 5px;
+	background-color: rgba(255,255,255,0.2);
+}
