--- a/css/index.css
+++ b/css/index.css
@@ -31,9 +31,13 @@
 
 		text-align: center;
 		margin-top: 20px;
-		font-size: 36px;
+		font-size: 64px;
 		padding: 10px;
-		text-shadow: 2px 2px #000;
+		text-shadow: 0 0 30px #000; /* horizontal-offset vertical-offset 'blur' colour */
+		-moz-text-shadow: 0 0 30px #000;
+		-webkit-text-shadow: 0 0 30px #000;
+		font-weight: bold;
+		-webkit-text-stroke-color: black;
 		color: #FFF;
 }
 
