--- a/css/everything.css
+++ b/css/everything.css
@@ -1,3 +1,13 @@
 body{
 	font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
 }
+@font-face {
+    font-family: myFirstFont;
+    src: url("../font/rationale-webfont.woff");
+}
+
+h1{
+	font-family: myFirstFont;
+	color:white;
+	text-align: center;
+}
